Bug fixes, Refactoring, New features - Creata la pagina settings - Refactoring del codice (con commenti TODO da rivedere) - Corretto i bug del salvare coordinate e foto per i quali cambiando activity sparivano - Corretto bug per il quale cancellare la foto non la cancellava dalla memoria del dispositivo - Creata la funzione clear per la posizione - Creata la funzione clear per automatic saving
!!!! Bug da risolvere:
1) Ogni volta che installo app per la prima volta, e quindi non ha i permessi al gps, crasha ancora prima che possa chiederti i permessi
2) Quando usi la camera per fare una foto non deve chiederti se vuoi scattarla con l'app stessa ma deve usare di default la camera

--- a/app/src/main/res/layout/activity_automatic_saving.xml
+++ b/app/src/main/res/layout/activity_automatic_saving.xml
@@ -51,15 +51,29 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="248dp"
+        android:layout_marginTop="32dp"
         android:onClick="saveButton"
         android:text="Save"
         android:textColor="#000000"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bluetoothtext" />
+
+    <Button
+        android:id="@+id/clearbtn"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear all"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:onClick="Clear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bluetoothtext"
-        app:layout_constraintVertical_bias="0.259" />
+        app:layout_constraintTop_toBottomOf="@+id/saveBtn"
+        app:layout_constraintVertical_bias="0.155" />
 </androidx.constraintlayout.widget.ConstraintLayout>
