--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
 
     <TextView
         android:id="@+id/coord_txt"
-        android:layout_width="277dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="365dp"
+        android:layout_height="136dp"
+        android:layout_marginTop="24dp"
         android:drawableLeft="@android:drawable/ic_menu_mylocation"
+        android:gravity="center"
         android:text="Coordinates:"
-        android:textSize="14sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="48dp"
         android:onClick="ManualSaving"
         android:text="Manual Saving"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,13 +35,14 @@
 
     <TextView
         android:id="@+id/park_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_width="312dp"
+        android:layout_height="79dp"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
         android:text="Park's time: none"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coord_txt" />
 
@@ -52,6 +53,7 @@
         android:layout_marginBottom="56dp"
         android:onClick="startPosDetails"
         android:text="Position Details"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
