--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,16 @@
 
     <TextView
         android:id="@+id/coord_txt"
-        android:layout_width="365dp"
-        android:layout_height="136dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="310dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="12dp"
         android:drawableLeft="@android:drawable/ic_menu_mylocation"
         android:gravity="center"
         android:text="Coordinates:"
-        android:textSize="20sp"
+        android:textAlignment="viewStart"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +27,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:onClick="ManualSaving"
         android:text="Manual Saving"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,29 +37,39 @@
 
     <TextView
         android:id="@+id/park_time"
-        android:layout_width="312dp"
-        android:layout_height="79dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="310dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Park's time: none"
-        android:textSize="20sp"
+        android:text="Park's time:"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coord_txt" />
 
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="213dp"
+        android:layout_height="202dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/park_time" />
+
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="28dp"
         android:onClick="startPosDetails"
         android:text="Position Details"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/park_time"
-        app:layout_constraintVertical_bias="0.28" />
+        app:layout_constraintTop_toBottomOf="@+id/map"
+        app:layout_constraintVertical_bias="0.113" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
