--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,6 +16,6 @@
     <item
         android:id="@+id/action_opt_3"
         android:orderInCategory="100"
-        android:title="Settings"
+        android:title="Help"
         app:showAsAction="never" />
 </menu>
